--- a/templates/buildbarre_home.html
+++ b/templates/buildbarre_home.html
@@ -45,7 +45,7 @@
     height: 35px;
     padding:5px;
     color:#fff;
-    background:blue;
+    background:darkslateblue;
     border:none;
     border-radius:3px;
     outline: none;
@@ -94,7 +94,7 @@
     text-decoration: line-through;
   }
   .blue{
-    color: blue;
+    color: darkslateblue;
   }
     .wid{
     max-width: 800px;
